# Scraping-Automated-pipeline

./: .env  .env.example  .gitignore  README.md  check_email_dup copy.py  check_email_dup.py  company_b2b_scrapingdog.py  database.xlsx  database_not_dup_extract.json  excel_company_lookup.py  excel_leads_to_postgres.py  free_company_enrichment.py  hq_country_from_scrapingdog.py  lead_format.json  main.py  pyproject.toml  requirements.txt  run_dup_check.py  run_main.py  run_pipeline.py  scrape_api_key.py
__pycache__/: company_b2b_scrapingdog.cpython-314.pyc.2137937812192  run_xlsx_validation.cpython-313.pyc.2175746857584  single_email_check.cpython-313.pyc.2523187660816  single_email_check.cpython-313.pyc.2538620552448
app/: __init__.py
app/company_enrichment/: __init__.py  __main__.py  cache_service.py  comparator.py  models.py  normalizers.py  repository.py  runner.py  scrapingdog_client.py  service.py  types.py
check_duplication/: check_duplicate.py
company_profile/: .env.example  __init__.py  company_contract.py  company_enrichment_service.py  elasticsearch_repository.py  example_usage.py  normalizer.py  postgres_repository.py  scrapingdog_client.py  sufficiency.py
lead_cache_json/: __init__.py  industry_normalizer.py  json_contract.py  json_formatter.py  lead_json_io.py  record_normalizer.py  validators.py
single_email_check.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  tmpm47h4w1s  top_level.txt
temp/: json-date.json
tests/: test_company_profile.py  test_lead_cache_json_formatter.py
worker_pool/: main.py  requirements.txt
